--- a/learn_new_things/Swift100Days_PaulHudson/Project1/Project1/Base.lproj/Main.storyboard
+++ b/learn_new_things/Swift100Days_PaulHudson/Project1/Project1/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -43,7 +44,36 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eKj-Kk-0BV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="534.78260869565224" y="-3.3482142857142856"/>
+            <point key="canvasLocation" x="365" y="-3"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="miY-xu-yBg">
+            <objects>
+                <viewController storyboardIdentifier="Detail" id="Nc7-ao-MKf" customClass="DetailViewController" customModule="Project1" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="xgk-2S-L1I">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="55l-5I-Whn">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="TXP-CH-qv7"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="55l-5I-Whn" firstAttribute="centerX" secondItem="xgk-2S-L1I" secondAttribute="centerX" id="8xl-Oa-t8e"/>
+                            <constraint firstItem="55l-5I-Whn" firstAttribute="centerY" secondItem="xgk-2S-L1I" secondAttribute="centerY" id="D9q-8R-YgE"/>
+                            <constraint firstItem="55l-5I-Whn" firstAttribute="leading" secondItem="TXP-CH-qv7" secondAttribute="leading" id="KXG-ad-Exo"/>
+                            <constraint firstItem="55l-5I-Whn" firstAttribute="top" secondItem="xgk-2S-L1I" secondAttribute="topMargin" constant="-44" id="yEt-Ps-6gH"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="55l-5I-Whn" id="sQ3-Kc-vNO"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="erc-AL-lzh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1118.840579710145" y="-3.3482142857142856"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Pnd-w2-6If">
