--- a/learn_new_things/Swift100Days_PaulHudson/Project4-6/Project4-6/Base.lproj/Main.storyboard
+++ b/learn_new_things/Swift100Days_PaulHudson/Project4-6/Project4-6/Base.lproj/Main.storyboard
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
+        <!--View Controller-->
         <scene sceneID="fVO-EC-3ah">
             <objects>
-                <tableViewController id="Wrf-tr-584" sceneMemberID="viewController">
+                <tableViewController id="Wrf-tr-584" customClass="ViewController" customModule="Project4_6" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="hnH-dQ-EY9">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
