#100DaysWithSwift: #Day43.2 Project10
* #Day43, reading 2: Custom subclasses of NSObject

* Created a new Cocoa Touch class named Person.swift to hold a Person class, with a string name and string image.

* Added an empty Person array named 'people' to ViewController.swift

* Started to create a new Person object each time the image is selected from the UIImageControllerPicker

* Changed the number of items in section to count of the people array

* A few small changes in Storyboard to display the collection view cell better in both light and dark mode

Signed-off-by: Joe Pham <rungxanh2901@gmail.com>

--- a/learn_new_things/Swift100Days_PaulHudson/Project10/Project10/Base.lproj/Main.storyboard
+++ b/learn_new_things/Swift100Days_PaulHudson/Project10/Project10/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -14,7 +15,7 @@
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Og7-9C-BUl">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="S3y-Zv-CXh">
                             <size key="itemSize" width="140" height="180"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -42,7 +43,7 @@
                                         </label>
                                     </subviews>
                                 </collectionViewCellContentView>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
                                 <connections>
                                     <outlet property="imageView" destination="pl8-xl-VqP" id="dAZ-gz-6qH"/>
                                     <outlet property="name" destination="Yjy-jH-1Bg" id="de1-m2-wdq"/>
@@ -79,4 +80,12 @@
             <point key="canvasLocation" x="-36.231884057971016" y="57.589285714285708"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
